--- a/IBM i Access Client Solutions Connection Tool.csproj
+++ b/IBM i Access Client Solutions Connection Tool.csproj
@@ -11,7 +11,7 @@
     <PackageIcon>Setting_Icon_64.png</PackageIcon>
     <PackageIconUrl />
     <Company>IBM</Company>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <DelaySign>false</DelaySign>
     <StartupObject>ACS_WAPConnectionDetails.MyApplicationContext</StartupObject>
     <ApplicationIcon>Setting_Icon_32.ico</ApplicationIcon>
